traefik-endpoints/external/partdb/endpoints.yaml
---
apiVersion: v1  
kind: Endpoints  
metadata:  
  name: partdb
subsets:  
  - addresses:  
      - ip: 192.168.1.50
    ports:  
      - port: 6900
