traefik-endpoints/external/partdb/service.yaml
---
apiVersion: v1  
kind: Service  
metadata:  
  name: partdb  
spec:  
  ports:  
    - protocol: TCP  
      port: 80  
      targetPort: 6900
