traefik-endpoints/external/partdb/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: partdb
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`parts.chriggle.com`)
      kind: Rule
      services:
        - name: partdb
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: chriggle-com-tls
